# A-Star-Pathfinder

./: CMakeLists.txt  Cell.cpp  Cell.h  Grid.cpp  Grid.h  README.md  UserInteraction.cpp  UserInteraction.h  main.cpp
SFML/lib/cmake/SFML/: SFMLStaticTargets.cmake
test/: CMakeLists.txt  CellTest.cpp  GridTest.cpp  runAllTests.cpp
